Fixing some bugs i noticed after loading on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -588,7 +588,7 @@ input:-webkit-autofill {
   }
 
   .deck-button {
-    padding-top: 0.25px;
+    padding-top: 0.25rem;
     font-size: 1.3rem;
     width: 85px;
     height: 35px;
@@ -720,7 +720,7 @@ input:-webkit-autofill {
   }
 
   .deck-button {
-    padding-top: 0.25px;
+    padding-top: 0.25rem;
     font-size: 1.3rem;
     width: 85px;
     height: 35px;
